Index.html completo
Index.html completo en su ttalidad

--- a/index.html
+++ b/index.html
@@ -1,15 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Evaluacion Final</title>
-	<link rel="stylesheet" href="css/estilos.css">
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no,initial-scale=1.0"> 
+    <link rel="stylesheet" href="css/estilos.css">
+    <title>Comenzando con la fotografía</title>
 </head>
 <body>
+    <div class="contenido">
+      <header>
+        <div class="cabeceraTitulo">
+          <span>Comenzando con la fotografía</span>
+        </div>
+        <div class="cabeceraMenu">
+          <nav>
+            <a class="menuActivo" href="index.html">Inicio</a>
+            <a href="paisajes.html">Paisajes</a>
+            <a href="retratos.html">Retratos</a>
+          </nav>
+        </div>
+      </header>
+	  <section id="imagenes">
+        <div class="imagenCentral">
+          <img src="images/central.jpg" alt="Palacio Legislativo Montevideo Uruguay">
+        </div>
+        <div class="imagenSecundaria">
+          <div class="ColumnaImagenSecundaria">
+            <a href="paisajes.html">
+              <img src="images/paisaje.jpg" alt="Paisaje" class="imagenSecundaria1">
+            </a>
+          </div>
+          <div class="ColumnaImagenSecundaria">
+            <a href="retratos.html">
+              <img src="images/retrato.jpg" alt="Retrato" class="imagenSecundaria2">
+            </a>
+          </div>
+        </div>
+      </section>
 
-	<header></header>
-	<section></section>
-	<footer></footer>
+      <footer>
+      	<!-- Se agrega un DIV por columna y se le asignan margenes personalizados -->
+        <div>
+          <h1>Contacto</h1>
+          <p>Email: maileguar@gmail.com</p>
+          <p>Dirección: Calle 1234, Montevideo - Uruguay</p>
+          <p>Teléfono: +59890123456</p>
+        </div>
+
+        <div>
+          <h1>Términos</h1>
+          <p>Material protegido de copyright</p>
+        </div>
+
+        <div>
+          <h1>Redes Sociales</h1>
+          <p>
+            <img src="images/twitter.png" width="18px">
+            <a href="https://www.twitter.com" target="_blank">Twitter</a>
+          </p>
+          <p>
+            <img src="images/facebook.png" width="18px">
+            <a href="https://www.facebook.com" target="_blank">Facebook</a>
+          </p>
+          <p>
+            <img src="images/instagram.png" width="18px">
+            <a href="https://www.instagram.com" target="_blank">Instagram</a>
+          </p>
+        </div>
+
+        <div>
+          <h1>Derechos</h1>
+          <p>Andrés Damonte © 2018</p>
+        </div>
+
+      </footer>
 	
 </body>
 </html>
