--- a/index.html
+++ b/index.html
@@ -55,16 +55,19 @@
         <div>
           <h1>Redes Sociales</h1>
           <p>
-            <img src="images/twitter.png" width="18px">
-            <a href="https://www.twitter.com" target="_blank">Twitter</a>
+          	<a href="https://www.twitter.com" target="_blank">
+            	<img src="images/twitter.png" width="26px">Twitter
+            </a>
           </p>
           <p>
-            <img src="images/facebook.png" width="18px">
-            <a href="https://www.facebook.com" target="_blank">Facebook</a>
+            <a href="https://www.facebook.com" target="_blank">
+            	<img src="images/facebook.png" width="26px">Facebook
+            </a>
           </p>
           <p>
-            <img src="images/instagram.png" width="18px">
-            <a href="https://www.instagram.com" target="_blank">Instagram</a>
+          	<a href="https://www.instagram.com" target="_blank">
+            	<img src="images/instagram.png" width="26px">Instagram
+            </a>
           </p>
         </div>
 
