--- a/paisajes.html
+++ b/paisajes.html
@@ -14,28 +14,23 @@
         </div>
         <div class="cabeceraMenu">
           <nav>
-            <a class="menuActivo" href="index.html">Inicio</a>
-            <a href="paisajes.html">Paisajes</a>
+            <a href="index.html">Inicio</a>
+            <a class="menuActivo" href="paisajes.html">Paisajes</a>
             <a href="retratos.html">Retratos</a>
           </nav>
         </div>
       </header>
-	  <section id="imagenes">
-        <div class="imagenCentral">
-          <img src="images/central.jpg" alt="Palacio Legislativo Montevideo Uruguay">
+      <section id="imagenes">
+        <!-- GALERIA -->
+        <div class="galeria">
+          <div class="galeriaImg imgGal01"><img src="images/paisaje.jpg"></div>
+          <div class="galeriaImg imgGal02"><img src="images/paisaje.jpg"></div>
+          <div class="galeriaImg imgGal03"><img src="images/paisaje.jpg"></div>
+          <div class="galeriaImg imgGal04"><img src="images/paisaje.jpg"></div>
+          <div class="galeriaImg imgGal05"><img src="images/paisaje.jpg"></div>
+          <div class="galeriaImg imgGal06"><img src="images/paisaje.jpg"></div>
         </div>
-        <div class="imagenSecundaria">
-          <div class="ColumnaImagenSecundaria">
-            <a href="paisajes.html">
-              <img src="images/paisaje.jpg" alt="Paisaje" class="imagenSecundaria1">
-            </a>
-          </div>
-          <div class="ColumnaImagenSecundaria">
-            <a href="retratos.html">
-              <img src="images/retrato.jpg" alt="Retrato" class="imagenSecundaria2">
-            </a>
-          </div>
-        </div>
+
       </section>
 
       <footer>
@@ -77,7 +72,6 @@
         </div>
 
       </footer>
-    </div>
 	
 </body>
 </html>
